--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 11:05:20 2018</p>
+         Last Run: Wed Jul 18 12:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -33,10 +33,10 @@
                         <td>Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>76</td>
+                        <td>73</td>
                         <td>54</td>
                         <td>3</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SE</td>
                         <td>75</td>
                      </tr>
@@ -45,20 +45,20 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>49</td>
-                        <td>57</td>
+                        <td>47</td>
+                        <td>58</td>
                         <td>2</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>ESE</td>
                         <td>52</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>40</td>
-                        <td>57</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>46</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>14</td>
                         <td>ESE</td>
@@ -69,12 +69,12 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>44</td>
-                        <td>60</td>
+                        <td>40</td>
+                        <td>61</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>E</td>
-                        <td>63</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -121,7 +121,7 @@
                "data":[
                  "22",
                  "21",
-                 "21",
+                 "20",
                  "20"
                ]
              },
@@ -133,7 +133,7 @@
                "data":[
                  "22",
                  "21",
-                 "21",
+                 "20",
                  "20"
                ]
              }
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "76",
-                 "49",
-                 "40",
-                 "44"
+                 "73",
+                 "47",
+                 "46",
+                 "40"
                ]
              },
              {
@@ -198,9 +198,9 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "54",
-                 "57",
-                 "57",
-                 "60"
+                 "58",
+                 "58",
+                 "61"
                ]
              },
              {
@@ -211,7 +211,7 @@
                  "75",
                  "52",
                  "68",
-                 "63"
+                 "66"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 11:05:20 2018</p>
+         Last Run: Wed Jul 18 12:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,7 +253,7 @@
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>3</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -262,22 +262,22 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>0</td>
                         <td>37</td>
                         <td>4</td>
                         <td>11</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>6</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>2</td>
-                        <td>32</td>
+                        <td>31</td>
                         <td>6</td>
                         <td>13</td>
                         <td>W</td>
@@ -286,14 +286,14 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>15</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>7</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>46</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -301,11 +301,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>29</td>
+                        <td>28</td>
                         <td>6</td>
                         <td>16</td>
-                        <td>WNW</td>
-                        <td>55</td>
+                        <td>W</td>
+                        <td>52</td>
                      </tr>
                   </tbody>
                </table>
@@ -352,9 +352,9 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "17",
-                 "18",
                  "19",
                  "20",
+                 "21",
                  "21"
                ]
              },
@@ -365,9 +365,9 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "17",
-                 "18",
                  "19",
                  "20",
+                 "21",
                  "21"
                ]
              }
@@ -433,11 +433,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
+                 "43",
                  "37",
-                 "32",
-                 "30",
-                 "29"
+                 "31",
+                 "29",
+                 "28"
                ]
              },
              {
@@ -448,8 +448,8 @@
                  "3",
                  "6",
                  "11",
-                 "46",
-                 "55"
+                 "43",
+                 "52"
                ]
              }
            ]
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 11:05:20 2018</p>
+         Last Run: Wed Jul 18 12:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
