--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 12:05:03 2018</p>
+         Last Run: Wed Jul 18 13:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>73</td>
+                        <td>71</td>
                         <td>54</td>
                         <td>3</td>
                         <td>13</td>
@@ -45,31 +45,31 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>47</td>
-                        <td>58</td>
+                        <td>46</td>
+                        <td>57</td>
                         <td>2</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>52</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Mostly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>46</td>
-                        <td>58</td>
+                        <td>24</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>68</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Mostly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>40</td>
+                        <td>14</td>
                         <td>61</td>
                         <td>0</td>
                         <td>11</td>
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "73",
-                 "47",
+                 "71",
                  "46",
-                 "40"
+                 "24",
+                 "14"
                ]
              },
              {
@@ -198,8 +198,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "54",
-                 "58",
-                 "58",
+                 "57",
+                 "59",
                  "61"
                ]
              },
@@ -209,8 +209,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "75",
-                 "52",
-                 "68",
+                 "62",
+                 "78",
                  "66"
                ]
              }
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 12:05:03 2018</p>
+         Last Run: Wed Jul 18 13:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,7 +253,7 @@
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>3</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -262,20 +262,20 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>0</td>
                         <td>37</td>
                         <td>4</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>6</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>2</td>
                         <td>31</td>
                         <td>6</td>
@@ -289,11 +289,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>29</td>
+                        <td>28</td>
                         <td>7</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>43</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -301,9 +301,9 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>28</td>
+                        <td>27</td>
                         <td>6</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>W</td>
                         <td>52</td>
                      </tr>
@@ -352,8 +352,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "17",
+                 "18",
                  "19",
-                 "20",
                  "21",
                  "21"
                ]
@@ -365,8 +365,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "17",
+                 "18",
                  "19",
-                 "20",
                  "21",
                  "21"
                ]
@@ -433,11 +433,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "43",
+                 "44",
                  "37",
                  "31",
-                 "29",
-                 "28"
+                 "28",
+                 "27"
                ]
              },
              {
@@ -446,9 +446,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "3",
-                 "6",
+                 "7",
                  "11",
-                 "43",
+                 "44",
                  "52"
                ]
              }
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 12:05:03 2018</p>
+         Last Run: Wed Jul 18 13:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -490,36 +490,36 @@
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>3</td>
-                        <td>31</td>
+                        <td>0</td>
+                        <td>32</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>35</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>3</td>
-                        <td>35</td>
+                        <td>0</td>
+                        <td>36</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>39</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>22</td>
-                        <td>42</td>
+                        <td>9</td>
+                        <td>43</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>40</td>
+                        <td>29</td>
                      </tr>
                   </tbody>
                </table>
@@ -627,9 +627,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "3",
-                 "22"
+                 "0",
+                 "0",
+                 "9"
                ]
              },
              {
@@ -637,9 +637,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "31",
-                 "35",
-                 "42"
+                 "32",
+                 "36",
+                 "43"
                ]
              },
              {
@@ -647,9 +647,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "35",
-                 "39",
-                 "40"
+                 "34",
+                 "33",
+                 "29"
                ]
              }
            ]
